# SearchVacancies

./: README.md  main.py  pyproject.toml
src/: api_data_worker.py  currency_request.py  file_empty_exception.py  file_worker.py  file_worker_json.py  find_vacancy_constructor.py  functions.py  hhru_api.py  main.py  parser.py  vacancy.py
tests/: conftest.py  test_vacancy.py
