[tool.poetry]
name = "searchvacancies"
version = "0.1.0"
description = ""
authors = ["AlexandrBxbrxv <g1026@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
